# tree-sitter-hujson

./: .coderabbit.yaml  .gitignore  AI_DISCLOSURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  UPSTREAM-SYNC.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  test-prebuild.yml  upstream-sync-reminder.yml
bindings/c/: tree-sitter-hujson.pc.in
bindings/go/: binding_test.go  go.mod
bindings/python/tree_sitter_hujson/: __init__.py  binding.c
bindings/rust/: lib.rs
examples/: sample.hujson
queries/: outline.scm
scripts/: bump-version.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: adversarial.txt  invalid.txt  literals.txt  objects.txt
