[package]
name = "tree-sitter-hujson"
description = "HuJSON (JWCC) grammar for tree-sitter — JSON with comments and trailing commas"
version = "1.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hujson"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ggfevans/tree-sitter-hujson"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
