[package]
name = "tree-sitter-hujson"
description = "HuJSON (JWCC) grammar for tree-sitter — JSON with comments and trailing commas"
version = "1.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hujson"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ggfevans/tree-sitter-hujson"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
# Kept as a regular dependency only to back the deprecated `language()` shim;
# new consumers should use the `LANGUAGE` constant via `tree-sitter-language`.
tree-sitter = ">=0.23, <0.27"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0.87"
