[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-hujson"
description = "HuJSON (JWCC) grammar for tree-sitter — JSON with comments and trailing commas"
version = "1.0.1"
authors = [{ name = "Gareth Evans", email = "hi@gvns.ca" }]
keywords = ["incremental", "parsing", "tree-sitter", "hujson"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ggfevans/tree-sitter-hujson"
Repository = "https://github.com/ggfevans/tree-sitter-hujson"

[project.optional-dependencies]
core = ["tree-sitter~=0.23"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
