[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-hujson"
description = "HuJSON (JWCC) grammar for tree-sitter — JSON with comments and trailing commas"
version = "1.1.0"
authors = [{ name = "Gareth Evans", email = "hi@gvns.ca" }]
keywords = ["incremental", "parsing", "tree-sitter", "hujson"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ggfevans/tree-sitter-hujson"
Repository = "https://github.com/ggfevans/tree-sitter-hujson"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
